== 0.9.5

* Major enhancements
  * Better quoting when connection quote uses backslash (eval removes backslash).
  * Fixed a bug when paginating without a limit clause.

== 0.9.4 2010-12-02

* 1 Minor enhancement
  * Should only raise QueryBuilder::Error on initialize.

== 0.9.3 2010-11-15

* 1 Minor enhancement
  * Fixed pagination bug when page count is 1.

== 0.9.2 2010-10-06

* 1 Minor enhancement
  * Removed 'using .. parser' message.

== 0.9.1 2010-09-22

* 1 Major enhancement
  * Key based add_table (used to import key/value based fields).

== 0.9.0 2010-09-14

* 1 Major enhancements
  * Lazy loading of custom queries.
  * Select keys introspection in Query class.
  * Using new RubyLess.translate API.

== 0.8.3 2010-08-31

* 2 Major enhancements
  * Added support for "in ()" and "not in ()" clauses in filters.
  * Compilation of the parser extension in C by using extconf.rb in gem.

== 0.8.2 2010-08-30

* 1 Major enhancement
  * Added the possibility to overwrite defaults for a single query

== 0.8.1 2010-08-30

* 1 Major bug fix
  * Bug fix when using more then one 'group' in custom query definition file.

== 0.5.9 2010-08-30

* 1 major enhancement
  * Bug fix when using more then one 'group' in custom query definition file.

== 0.8.0 2010-07-22

* Major enhancements:
  * Better handling of mixed 'or' clauses.
  * Allowing ':' in relations and scopes.
  * Raises a SyntaxError on non-closing parenthesis.
  * Started to fix some issues with for PostgreSQL.

== 0.7.0 2010-05-27

* Major enhancements:
  * Fixed change class bugs.
  * A model can now include 'QueryBuilder' (better interface between class and compiler).
  * Better defaults declaration.
  * Added before_process and after_process hooks.
  * Using %Q{} to render dynamic string.
  * Added 'match' operator.
  * Added functions with dot syntax.
  * Added hook to deal with noop join scopes.
  * Better processing of clause_or (merging queries).